<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/alarmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_grey_200"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_make_alarm"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMakeAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="1dp"
            android:text="@string/ui_make_alarm_explanation"
            android:textSize="14sp"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/ui_tone"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:shrinkColumns="0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tvAlarmToneText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="4dp"
                        android:text="@string/ui_tone_name"
                        android:textSize="14sp"
                        android:textStyle="italic" />

                    <ImageView
                        android:id="@+id/tvAlarmTonePlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="4dp"
                        android:src="@drawable/play" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvChangeAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:text="@string/ui_choose_tone"
                android:textAllCaps="true"
                android:textColor="@color/md_blue_700"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnStartMonitoring"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_rect"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/ui_start_monitoring"
        android:textColor="@color/md_white_1000" />


    <RelativeLayout
        android:id="@+id/intruderLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/history_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_intruder_history"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="4dp"
                    android:text="@string/ui_clear"
                    android:textAllCaps="true"
                    android:textColor="@color/md_blue_700"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvIntruderHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/history_header"
            android:layout_marginTop="8dp"
            android:clipChildren="false"
            android:clipToPadding="false" />


        <TextView
            android:id="@+id/pvEmptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/history_header"
            android:layout_centerInParent="true"
            android:background="@color/md_grey_200"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="2dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/history_empty" />

    </RelativeLayout>

</LinearLayout>